# cmd/api/auth.go
@@ -51,6 +51,9 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 	user := &store.User{
 		Username: payload.Username,
 		Email:    payload.Email,
+		Role: store.Role{
+			Name: "user",
+		},
 	}
 
 	if err := user.Password.Hash(payload.Password); err != nil {
